--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <a href="index.html">...</a>
                 </li>
                 <li>
-                    <a href="index.html">Contacto</a>
+                    <a href="index.html">...</a>
                 </li>
             </ul>
         </nav>
