--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav id="main-menu">
             <ul>
                 <li>
-                    <a href="index.html">Inicio</a>
+                    <a href="#">Inicio</a>
                 </li>
                 <li>
                     <a href="#">Noticias</a>
@@ -36,13 +36,23 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="index.html">...</a>
+                    <a href="#">...</a>
                 </li>
                 <li>
-                    <a href="index.html">...</a>
+                    <a href="#">...</a>
                 </li>
                 <li>
-                    <a href="index.html">...</a>
+                    <a href="#">Contacto</a>
+                    <ul class="sub-li">
+                        <li>
+                            <a href="https://github.com/kevvj" target="_blank">GitHub</a>
+                        </li>
+                        <li>
+                            <a href="https://www.linkedin.com/in/kevin-jos%C3%A9-t-villalba-2977422aa/" target="_blank">Linkedin</a>
+                        </li>
+                        <li>
+                            <a href="#">Correo</a>
+                        </li>
                 </li>
             </ul>
         </nav>
