--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>jojo!!!</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="./img/JoJo's_Bizarre_Adventure_logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
 </head>
 
 <body>
@@ -64,7 +68,7 @@
             <div class="widget">
                 <h3>Califica la JojoApi</h3>
                 <div class="rating-conteiner">
-                    
+
                     <div class="rating">
                         <input type="radio" name="clr1">
                         <input type="radio" name="clr1">
@@ -115,9 +119,19 @@
             </div>
         </aside>
 
-        <div class="stand-container"></div>
+        <div class="stand-container">
+            <div id="spinner-container">
+                <div id="spinner">
+                    <span class="visually-hidden"></span>
+                </div>
+            </div>
+            
+        </div>
+
 
     </div>
+
+
 
     <!-- <aside>
             <div class="widget">
