--- a/index.html
+++ b/index.html
@@ -120,14 +120,14 @@
         </aside>
 
         <div class="stand-container">
-            <div id="spinner-container">
-                <div id="spinner">
-                    <span class="visually-hidden"></span>
-                </div>
-            </div>
             
         </div>
-
+        
+        <div class="spinner-container">
+            <div class="spinner">
+                <span class="visually-hidden"></span>
+            </div>
+        </div>
 
     </div>
 
