--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>jojo!!!</title>
+    <title>JoJo!</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="./img/JoJo's_Bizarre_Adventure_logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
