--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <nav id="main-menu">
             <ul>
                 <li>
-                    <a href="#">Inicio</a>
+                    <a href="#">Home</a>
                 </li>
                 <li>
-                    <a href="#">Noticias</a>
+                    <a href="#">News</a>
                     <ul class="sub-li">
                         <li>
                             <a href="#">Desarrollo web</a>
@@ -49,7 +49,7 @@
                     <a href="#">...</a>
                 </li>
                 <li>
-                    <a href="#">Contacto</a>
+                    <a href="#">Contact</a>
                     <ul class="sub-li">
                         <li>
                             <a href="https://github.com/kevvj" target="_blank">GitHub</a>
@@ -66,7 +66,7 @@
         </nav>
         <aside>
             <div class="widget">
-                <h3>Califica la JojoApi</h3>
+                <h3>Rating JojoApi</h3>
                 <div class="rating-conteiner">
 
                     <div class="rating">
