--- a/index.html
+++ b/index.html
@@ -81,41 +81,41 @@
             </div>
 
             <div class="widget">
-                <h3>Informacion de stands</h3>
+                <h3>Data Stands</h3>
                 <ul>
                     <li>
-                        <a href="#" id="a1">Stands Parte 3</a>
+                        <a href="#" id="a1">Part 3 Stands</a>
                     </li>
 
                     <li>
-                        <a href="#" id="a2">Stands Parte 4</a>
+                        <a href="#" id="a2">Part 4 Stands</a>
                     </li>
 
                     <li>
-                        <a href="#" id="a3">Stands Parte 5</a>
+                        <a href="#" id="a3">Part 5 Stands</a>
                     </li>
 
                     <li>
-                        <a href="#" id="a4">Stands Parte 6</a>
+                        <a href="#" id="a4">Part 6 Stands</a>
                     </li>
 
                     <li>
-                        <a href="#" id="a5">Stands Parte 7</a>
+                        <a href="#" id="a5">Part 7 Stands</a>
                     </li>
 
                     <li>
-                        <a href="#" id="a6">Stands Parte 8</a>
+                        <a href="#" id="a6">Part 8 Stands</a>
                     </li>
 
                     <li>
-                        <a href="#" id="all">Todos los stands</a>
+                        <a href="#" id="all">All stands</a>
                     </li>
                 </ul>
             </div>
 
             <div class="widget">
-                <h3>Frase del dia</h3>
-                <blockquote>Si lo puedes imaginar lo puedes programar</blockquote>
+                <h3>Day phrase</h3>
+                <blockquote>"Si lo puedes imaginar lo puedes programar"</blockquote>
             </div>
         </aside>
 
